--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -1,5 +1,24 @@
 .map{
     width: 100%;
     height: 600px;
-    
+    border: 0;
 }
+
+// .overmap {
+//     width: 500px;
+//     z-index: 10;
+//     position: absolute;
+//     left: 725px;
+//     top: 400px;
+//     background-color: #fff;
+//     border: 3px solid;
+//     padding: 10px;
+// }
+
+// .contact {
+//     position: relative;
+//     bottom: 35px;
+//     background-color: #fff;
+//     width: 50%;
+//     left: 120px;
+// }
