--- a/client/src/pages/Admin/admin.css
+++ b/client/src/pages/Admin/admin.css
@@ -1,11 +1,18 @@
 .admin-head {
     background-color: white;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+    border-radius: .125em;
     margin-bottom: 20px;
     height: 70px;
 }
 
 .logout {
-    color: red;
-    margin-top: 25px;
+  float: right;
+  margin-top: 13px;
+  margin-right: 30px;
+}
+
+#josh-text {
+    margin-top: 10px;
+    margin-left: 30px;
 }
