--- a/client/src/pages/Gallery/gallery.css
+++ b/client/src/pages/Gallery/gallery.css
@@ -1,14 +1,14 @@
-.galleryC{
+.galleryC {
   margin: 0 auto;
   width: 700px;
   height: 700px;
 }
 
-#gallery-tittle{
-  font-family: 'Lato',Arial,sans-serif;
+#gallery-title {
+  font-family: "Lato", Arial, sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
-  text-shadow: 0 0 1px rgba(255,255,255,0.3);
+  text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
   font-size: 4em;
   color: #566473;
   text-align: center;
