edit scss and add .nav-container in front of each tag to prevent styled tags,
add router to App.js, create route to pages

combined myParallax typing effect selection into a Home components

call Route  NavBar and add routes home, quote, gallery, and contact
to trigger onclick link events in nav bar to render each page

--- a/client/src/components/NavBar/myNav.scss
+++ b/client/src/components/NavBar/myNav.scss
@@ -1,55 +1,49 @@
 .nav-container {
-    margin: 0;
-	font-family: 'Lato',Arial,sans-serif;;
-	margin: 0 auto;
-	
-  }
+  margin: 0;
+  font-family: "Lato", Arial, sans-serif;
+  margin: 0 auto;
+}
 
-  
-  ul { 
-    margin: 0 auto; 
-    padding: 0; 
-    list-style: none; 
-    display: table;
-    width: 600px;
-    text-align: center;
-  }
+.nav-container ul {
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+  display: table;
+  text-align: center;
+}
 
+.nav-container li {
+  display: table-cell;
+  position: relative;
+  padding: 15px 1em;
+}
 
-  li { 
-    display: table-cell; 
-    position: relative; 
-    padding: 15px 0;
-  }
+.nav-container a {
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 0.2em;
+  display: inline-block;
+  position: relative;
+}
 
-  a {
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 0.2em;
-    display: inline-block;
-	position: relative;
+.nav-container a:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #566473;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+.nav-container a:hover:after {
+  width: 100%;
+  left: 0;
+}
+@media screen and (max-height: 300px) {
+  .nav-container ul {
+    margin-top: 40px;
   }
-
-  
-  a:after {    
-    background: none repeat scroll 0 0 transparent;
-    bottom: 0;
-    content: "";
-    display: block;
-    height: 2px;
-    left: 50%;
-    position: absolute;
-    background: #566473;
-    transition: width 0.3s ease 0s, left 0.3s ease 0s;
-    width: 0;
-
-  }
-  a:hover:after { 
-    width: 100%; 
-    left: 0; 
-  }
-  @media screen and (max-height: 300px) {
-      ul {
-        margin-top: 40px;
-      }
-  }
+}
