quote cut to one component and all routes working

--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&family=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
 
 .header-about {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Special Elite', cursive;
+    color:#566473;
     font-size: 70px;
 }
 
@@ -16,4 +16,9 @@
 .signature {
     font-family: 'Herr Von Muellerhoff', cursive;
     font-size: 60px;
+}
+
+.family {
+    margin: 0 auto;
+    height: 400px;
 }
