--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+
 html{
     min-width: 100vh;
     scroll-behavior: smooth;
+}
+
+h1{
+    font-family: 'Special Elite', cursive;
+    color:#566473;
+	text-decoration: none;
+ 	text-transform: uppercase;
+ 	letter-spacing: 1px;
+  	text-shadow: 0 0 1px rgba(255,255,255,0.3);
+    font-size: 3em;
 }
