page details working with quotes

--- a/client/src/components/Quote/quote.scss
+++ b/client/src/components/Quote/quote.scss
@@ -8,6 +8,10 @@
 }
 
 // ************ FINISH CSS **************** //
+.caption {
+  font-family: 'Special Elite', cursive;
+  color:#566473;
+}
 
 .logo {
     width: 200px;
