--- a/client/src/pages/Admin/admin.css
+++ b/client/src/pages/Admin/admin.css
@@ -33,13 +33,13 @@
   color: red;
 }
 
-td {
+/* td {
   font-family: 'Special Elite', cursive;
   color:#566473;
   font-size: 20px !important;
   padding-bottom: 5px !important;
   padding-top: 5px !important;
-}
+} */
 
 #admin-jumbo {
   padding-top: 12px;
