quote validation fully working

--- a/client/src/pages/Quote/quote.scss
+++ b/client/src/pages/Quote/quote.scss
@@ -19,21 +19,21 @@
   }
   
   
-  .white {
+  .White {
       background: url('../../images/white.jpg') bottom center/cover no-repeat;
       width: 150px;
       height: 150px;
       margin: 0 auto;
   }
   
-  .grey {
+  .Grey {
       background: url('../../images/grey.jpg') bottom center/cover no-repeat;
       width: 150px;
       height: 150px;
       margin: 0 auto;
   }
   
-  .easter {
+  .Easter {
       background: url('../../images/easter-blue.jpg') bottom center/cover no-repeat;
       width: 150px;
       height: 150px;
@@ -41,7 +41,7 @@
       
   }
   
-  .stain-white {
+  .White-Stain {
       background: url('../../images/white-stain.jpg') bottom center/cover no-repeat;
       width: 150px;
       height: 150px;
@@ -58,7 +58,7 @@
       margin-bottom: 20px;
   }
   
-  .stain-grey {
+  .Grey-Stain {
       background: url('../../images/stain-grey.webp') bottom center/cover no-repeat;
       width: 150px;
       height: 150px;
@@ -75,7 +75,7 @@
       margin-bottom: 20px;
   }
   
-  .stain-brown {
+  .Medium {
       background: url('../../images/stain.webp') bottom center/cover no-repeat;
       width: 150px;
       height: 150px;
@@ -184,7 +184,7 @@
 
     // ************ DOOR DESIGN CSS **************** //
 
-    .design1 {
+    .Arrow {
         background: url('../../images/Design1.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 400px;
@@ -201,7 +201,7 @@
         margin-bottom: 20px;
     }
     
-    .design2 {
+    .Chevron {
         background: url('../../images/Design2.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 400px;
@@ -218,7 +218,7 @@
         margin-bottom: 20px;
     }
     
-    .design3 {
+    .Multiple {
         background: url('../../images/Design3.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 400px;
@@ -235,7 +235,7 @@
         margin-bottom: 20px;
     }
     
-    .design4 {
+    .Curved {
         background: url('../../images/Design4.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 400px;
@@ -252,7 +252,7 @@
         margin-bottom: 20px;
     }
     
-    .design5 {
+    .Paneled {
         background: url('../../images/Design5.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 400px;
@@ -359,7 +359,7 @@
       }
 
     //   ************ BARN DOOR KIT CSS **************** //
-    .kit1 {
+    .J {
         background: url('../../images/Kit1.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 200px;
@@ -376,7 +376,7 @@
         margin-bottom: 20px;
     }
     
-    .kit2 {
+    .Rhombic {
         background: url('../../images/Kit2.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 200px;
@@ -393,7 +393,7 @@
         margin-bottom: 20px;
     }
     
-    .kit3 {
+    .Big {
         background: url('../../images/Kit3.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 200px;
@@ -501,7 +501,7 @@
       }
       
       // ************ HANDLE CSS **************** //
-      .handle1 {
+      .Square {
         background: url('../../images/Handle1.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 200px;
@@ -518,7 +518,7 @@
         margin-bottom: 20px;
     }
     
-    .handle2 {
+    .Round {
         background: url('../../images/Handle2.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 200px;
@@ -535,7 +535,7 @@
         margin-bottom: 20px;
     }
     
-    .handle3 {
+    .Latch {
         background: url('../../images/Handle3.jpg') bottom center/cover no-repeat;
         width: 200px;
         height: 200px;
@@ -641,4 +641,4 @@
           visibility: hidden;
         }
       }
-      // ************ REVIEW CSS **************** //
+    
