more changes on quote and admin, just CSS

--- a/client/src/components/About/about.css
+++ b/client/src/components/About/about.css
@@ -3,8 +3,7 @@
 
 
 .header-about {
-    font-family: 'Special Elite', cursive;
-    color:#566473;
+    font-family: 'Neucha', cursive;
     font-size: 70px;
 }
 
