--- a/client/src/pages/Admin/admin.css
+++ b/client/src/pages/Admin/admin.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+
 .admin-head {
     background-color: white;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
@@ -44,4 +45,9 @@
   background-color: red;
   width: 300px;
   height: 300px;
+}
+
+
+.MuiBox-root-32 {
+  width: 100%;
 }
